--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <h1>🍕 Pizza</h1>
+    <p>
+      Pizza was first invented in Naples, Italy as a fast, affordable, tasty
+      meal for working-class Neapolitans on the go. While we all know and love
+      these slices of today, pizza actually didn't gain mass appeal until the
+      1940s, when immigrating Italians brought their classic slices to the
+      United States.
+    </p>
   </body>
 </html>
