--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>🍕 Contact us</h1>
+    <p>
+      To contact us, please email us at
+      <a href="mailto:good@awesomepizza.com">good@awesomepizza.com.</a>
+    </p>
+    <footer>
+      <div class="d-flex">
+        <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/"
+          >Homepage</a
+        >
+        <a
+          class="p-2 border-3 bg-danger rounded text-decoration-none"
+          href="photo.html"
+          >Photo</a
+        >
+        <a
+          class="p-2 border-3 bg-warning rounded text-decoration-none"
+          href="/contact.html"
+          >Contact</a
+        >
+      </div>
+    </footer>
+  </body>
 </html>
