--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
@@ -16,5 +23,22 @@
       1940s, when immigrating Italians brought their classic slices to the
       United States.
     </p>
+    <footer>
+      <div class="d-flex">
+        <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/"
+          >Homepage</a
+        >
+        <a
+          class="p-2 border-3 bg-danger rounded text-decoration-none"
+          href="photo.html"
+          >Photo</a
+        >
+        <a
+          class="p-2 border-3 bg-warning rounded text-decoration-none"
+          href="/contact.html"
+          >Contact</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
