--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>History of Pizza - Pizza.com</title>
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -13,6 +13,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/styles.css" />
+    <meta
+      name="description"
+      content="This is a history about the orig of pizza"
+    />
   </head>
   <body>
     <h1>🍕 Pizza</h1>
