--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Photos of Homemade Pizza - Pizza.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/styles.css" />
+    <meta name="description" content="Images of Italian home made pizza with olives" />
   </head>
   <body>
     <img src="images/pizza.png" class="img-fluid rounded p-3" />
