added alt text to images.

--- a/index.html
+++ b/index.html
@@ -29,17 +29,22 @@
     </p>
     <footer>
       <div class="d-flex">
-        <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/"
+        <a
+          class="p-2 border-3 bg-warning rounded text-decoration-none"
+          href="/"
+          title="pizza.com homepage"
           >Homepage</a
         >
         <a
           class="p-2 border-3 bg-danger rounded text-decoration-none"
           href="photo.html"
+          title="photos of homemade pizza"
           >Photo</a
         >
         <a
           class="p-2 border-3 bg-warning rounded text-decoration-none"
           href="/contact.html"
+          title="pizza.com email contact"
           >Contact</a
         >
       </div>
