--- a/contact.html
+++ b/contact.html
@@ -19,16 +19,22 @@
     <h1>🍕 Contact us</h1>
     <p>
       To contact us, please email us at
-      <a href="mailto:good@awesomepizza.com">good@awesomepizza.com.</a>
+      <a href="mailto:good@awesomepizza.com" title="pizza.com email contact"
+        >good@awesomepizza.com.</a
+      >
     </p>
     <footer>
       <div class="d-flex">
-        <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/"
+        <a
+          class="p-2 border-3 bg-warning rounded text-decoration-none"
+          href="/"
+          title="pizza.com homepage"
           >Homepage</a
         >
         <a
           class="p-2 border-3 bg-danger rounded text-decoration-none"
           href="photo.html"
+          title="photos of homemade pizza"
           >Photo</a
         >
         <a
