--- a/photo.html
+++ b/photo.html
@@ -15,15 +15,17 @@
     <meta name="description" content="Images of Italian home made pizza with olives" />
   </head>
   <body>
-    <img src="images/pizza.png" class="img-fluid rounded p-3" />
+    <h1>
+      Pizza Pictures
+    </h1>
+    <img src="images/pizza.png" class="img-fluid rounded p-3" alt="olive pizza" />
   </br>
-  <img src="images/homemadepizza.png" class="img-fluid rounded p-3" />
+  <img src="images/homemadepizza.png" class="img-fluid rounded p-3" alt="homemade italian pizza" />
    <footer>
       <div class="d-flex">
-        <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/">Homepage</a>
-        <a class="p-2 border-3 bg-danger rounded text-decoration-none" href="photo.html">Photo</a>
-        <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/contact.html"
-          >Contact</a
+        <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/" title="pizza.com homepage">Homepage</a>
+        <a class="p-2 border-3 bg-danger rounded text-decoration-none" href="photo.html" title="photos of homemade pizza">Photo</a>
+        <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/contact.html" title="pizza.com email contact">Contact</a
         >
       </div>
     </footer>
