removed bootstrap classes from images and added css to images

--- a/photo.html
+++ b/photo.html
@@ -18,9 +18,9 @@
     <h1>
       Pizza Pictures
     </h1>
-    <img src="images/pizza.png" class="img-fluid rounded p-3" alt="olive pizza" />
+    <img src="images/pizza.png" alt="olive pizza" />
   </br>
-  <img src="images/homemadepizza.png" class="img-fluid rounded p-3" alt="homemade italian pizza" />
+  <img src="images/homemadepizza.png" alt="homemade italian pizza" />
    <footer>
       <div class="d-flex">
         <a class="p-2 border-3 bg-warning rounded text-decoration-none" href="/" title="pizza.com homepage">Homepage</a>
