added tittle to contact html

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
         <a
           class="p-2 border-3 bg-warning rounded text-decoration-none"
           href="/contact.html"
+          title="pizza.com email contact"
           >Contact</a
         >
       </div>
